feat: added p tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Thank You for ALL</p>
     <h1>Good Morning and Good Night</h1>
 </body>
 </html>
