feat:added table

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <table>
+
+        <tr>
+            <td>Name</td>
+            <td>Age</td>
+            <td>Gender</td>
+            <td>City</td>
+        </tr>
+    </table>
     <p>Thank You for ALL</p>
     <h1>Good Morning and Good Night</h1>
 </body>
