--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <table>
 
         <tr>
-            <td>Name</td>
-            <td>Age</td>
-            <td>Gender</td>
-            <td>City</td>
+            <td>Name</td><br>
+            <td>Age</td><br>
+            <td>Gender</td><br>
+            <td>City</td><br>
         </tr>
     </table>
     <p>Thank You for ALL</p>
